--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>SATCOM | Global Web Services</title>
+    <title>Amogus</title>
     <meta
       name="theme-color"
       media="(prefers-color-scheme: dark)"
