--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Amogus</title>
+    <title>DrynkingFountain</title>
     <meta
       name="theme-color"
       media="(prefers-color-scheme: dark)"
@@ -27,7 +27,7 @@
         "mainEntity": [
           {
             "@type": "Question",
-            "name": "What is SATCOM?",
+            "name": "What is DrynkingFountain?",
             "acceptedAnswer": {
               "@type": "Answer",
               "text": "██████████████████████████ Redacted."
@@ -44,13 +44,13 @@
       class="flex-center logo-wrapper header-center"
     >
         <!--img class="logo" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-google-icon-logo-png-transparent-svg-vector-bie-supply-14.png" alt="SATCOM" /-->
-        <img class="logo" src="https://www.nato.int/nato_static_fl2014/assets/pictures/images_mfu/2021/4/stock/210423-satcom.jpg" alt="SATCOM" />
+        <img class="logo" src="df.png" alt="DrynkingFountain" />
       <!--img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQp2hsmrFkN1xxnHxhiatSeJ9mqq4E-YL7VYASapNHhmg&s" alt="SATCOM" /-->
-      <h1>SATCOM | CLDFLR</h1>
+      <h1>DrynkingFountain | Beta 1.1</h1>
     </div>
     <div class="flex-center desc">
       <p>
-        SATCOM is a internet company that focuses on global computing services.
+       DrynkingFountain is based off of Ultraviolet by TitaniumNetwork..
       </p>
     </div>
 
@@ -60,7 +60,7 @@
         value="https://www.google.com/search?q=%s"
         type="hidden"
       />
-      <input id="uv-address" type="text" placeholder="Search the web freely" />
+      <input id="uv-address" type="text" placeholder="Search for your dad freely..." />
     </form>
     <div class="desc left-margin">
       <p id="uv-error"></p>
