--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -44,7 +44,7 @@
       class="flex-center logo-wrapper header-center"
     >
         <!--img class="logo" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-google-icon-logo-png-transparent-svg-vector-bie-supply-14.png" alt="SATCOM" /-->
-        <img class="logo" src="df.png" alt="DrynkingFountain" />
+        <img class="logo" src="https://raw.githubusercontent.com/fyrekitten/fs/main/df.png" alt="DrynkingFountain" />
       <!--img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQp2hsmrFkN1xxnHxhiatSeJ9mqq4E-YL7VYASapNHhmg&s" alt="SATCOM" /-->
       <h1>DrynkingFountain | Beta 1.1</h1>
     </div>
