add visitor counter

--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="flex-center desc">
       <p>
-       DrynkingFountain is based off of Ultraviolet by TitaniumNetwork..
+       DrynkingFountain is based off of Ultraviolet by TitaniumNetwork.
       </p>
     </div>
 
@@ -61,11 +61,14 @@
         type="hidden"
       />
       <input id="uv-address" type="text" placeholder="Search for your dad freely..." />
+      <a href="https://www.freecounterstat.com" title="web counter"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=59uwdfnblxg3rgc56dmay13fh9bprhef" border="0" title="web counter" alt="web counter"></a>
+
     </form>
     <div class="desc left-margin">
       <p id="uv-error"></p>
       <pre id="uv-error-code"></pre>
     </div>
+    <p>DrynkingFountain runs on 16 core servers, with a total of 8gb ram. Servers lagging? They reboot weekly!</p>
     
   </body>
 </html>
