--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -40,7 +40,7 @@
 
   <body>
     <div
-      title="SATCOM Logo"
+      title="DF Logo"
       class="flex-center logo-wrapper header-center"
     >
         <!--img class="logo" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-google-icon-logo-png-transparent-svg-vector-bie-supply-14.png" alt="SATCOM" /-->
@@ -61,8 +61,11 @@
         type="hidden"
       />
       <input id="uv-address" type="text" placeholder="Search for your dad freely..." />
-      <hr>
-      <a href="https://www.freecounterstat.com" title="web counter"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=59uwdfnblxg3rgc56dmay13fh9bprhef" border="0" title="web counter" alt="web counter"></a>
+      <div>
+        <a href="https://www.freecounterstat.com" title="web counter"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=59uwdfnblxg3rgc56dmay13fh9bprhef" border="0" title="web counter" alt="web counter"></a>
+
+      </div>
+
 
     </form>
     <div class="desc left-margin">
