Update index.html for minecrat

--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -47,10 +47,11 @@
         <img class="logo" src="https://raw.githubusercontent.com/fyrekitten/fs/main/df.png" alt="DrynkingFountain" />
       <!--img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQp2hsmrFkN1xxnHxhiatSeJ9mqq4E-YL7VYASapNHhmg&s" alt="SATCOM" /-->
       <h1>DrynkingFountain | Beta 1.1</h1>
+      <a href="minecraft.html">Minecraft 1.8</a> 
     </div>
     <div class="flex-center desc">
       <p>
-       DrynkingFountain is based off of Ultraviolet by TitaniumNetwork.
+       DrynkingFountain is based off of Ultravi0let by TitaniumNetw0rk.
       </p>
     </div>
 
@@ -61,12 +62,14 @@
         type="hidden"
       />
       <input id="uv-address" type="text" placeholder="Search for your dad freely..." />
-      <br>
-        <a href="https://www.freecounterstat.com" title="web counter"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=59uwdfnblxg3rgc56dmay13fh9bprhef" border="0" title="web counter" alt="web counter"></a>
+     
 
 
 
     </form>
+     <br>
+      
+    <a href="https://www.freecounterstat.com" title="web counter"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=59uwdfnblxg3rgc56dmay13fh9bprhef" border="0" title="web counter" alt="web counter"></a>
     <div class="desc left-margin">
       <p id="uv-error"></p>
       <pre id="uv-error-code"></pre>
