center the stats

--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -68,9 +68,10 @@
 
     </form>
      <br>
-      
+     <center> 
     <a href="https://www.freecounterstat.com" title="web counter"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=59uwdfnblxg3rgc56dmay13fh9bprhef" border="0" title="web counter" alt="web counter"></a>
-    <div class="desc left-margin">
+     </center>
+       <div class="desc left-margin">
       <p id="uv-error"></p>
       <pre id="uv-error-code"></pre>
     </div>
