--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -45,7 +45,7 @@
     >
         <img class="logo" src="/df.png" alt="DrynkingFountain" />
 
-      <h1>DrynkingFountain | Version 3</h1>
+      <h1>DrynkingFountain | V3</h1>
     </div>
     <div class="flex-center desc">
       <p>
