--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -40,16 +40,16 @@
 
   <body>
     <div
-      title="SATCOM Logo"
+      title="DF Logo"
       class="flex-center logo-wrapper header-center"
     >
         <img class="logo" src="/df.png" alt="DrynkingFountain" />
 
-      <h1>DrynkingFountain | V3</h1>
+      <h1>DF | Global Web Services.</h1>
     </div>
     <div class="flex-center desc">
       <p>
-        DrynkingFountain is your homebase for searching for ELKAY branded Drinking Fountains.
+        DrynkingFountain is version 3 yay.
       </p>
     </div>
 
