--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -61,6 +61,9 @@
       />
       <input id="uv-address" type="text" placeholder="Search for your dad freely..." />
     </form>
+    <a href="https://fyrekitten.github.io/minecraft">Minecraft</a> 
+     <a href="https://fyrekitten.github.io/sm64">Mario64</a>
+     <a href="https://fyrekitten.github.io/games">More Games!</a> 
     <center>
       <p>view counter:</p>
     <div><div id="sfc163x3gzbj18kx7rpbhfxbyeb6ccmwnbz"></div>
