Update index.html to fix forematting issyues

--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -49,7 +49,9 @@
     </div>
     <div class="flex-center desc">
       <p>
+        <center>
         DrynkingFountain is version 3 yay.
+        </center>
       </p>
     </div>
 
@@ -61,10 +63,10 @@
       />
       <input id="uv-address" type="text" placeholder="Search for your dad freely..." />
     </form>
-    <a href="https://fyrekitten.github.io/minecraft">Minecraft</a> 
-     <a href="https://fyrekitten.github.io/sm64">Mario64</a>
-     <a href="https://fyrekitten.github.io/games">More Games!</a> 
-    <center>
+        <center>
+    <a href="https://fyrekitten.github.io/minecraft">Minecraft</a>      <a href="https://fyrekitten.github.io/games">More Games!</a>      <a href="https://fyrekitten.github.io/sm64">Mario64</a>
+
+
       <p>view counter:</p>
     <div><div id="sfc163x3gzbj18kx7rpbhfxbyeb6ccmwnbz"></div>
 <script type="text/javascript" src="https://counter8.optistats.ovh/private/counter.js?c=163x3gzbj18kx7rpbhfxbyeb6ccmwnbz&down=async" async></script>
