--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -78,7 +78,7 @@
     </div>
     <div id="sfc163x3gzbj18kx7rpbhfxbyeb6ccmwnbz"></div>
 <script type="text/javascript" src="https://counter8.optistats.ovh/private/counter.js?c=163x3gzbj18kx7rpbhfxbyeb6ccmwnbz&down=async" async></script>
-<br><img src="https://counter8.optistats.ovh/private/freecounterstat.php?c=163x3gzbj18kx7rpbhfxbyeb6ccmwnbz" border="0" title="page hits counter" alt="page hits counter"></a></noscript>
+<br><img src="https://counter8.optistats.ovh/private/freecounterstat.php?c=163x3gzbj18kx7rpbhfxbyeb6ccmwnbz" border="0" title="page hits counter" alt="page hits counter"></noscript>
 
   </body>
 </html>
