--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -37,7 +37,22 @@
       }
     </script>
   </head>
+<div class="snowflakes">
+  <!-- add your 'snowflake' images below - you can add more or less if needed -->
+  <div class="snowflake"><img src="/df.png" style="width:20px;" /></div>
+    <div class="snowflake"><img src="/df.png" style="width:20px;" /></div>
+    <div class="snowflake"><img src="/df.png" style="width:20px;" /></div>
+    <div class="snowflake"><img src="/df.png" style="width:20px;" /></div>
+    <div class="snowflake"><img src="/df.png" style="width:20px;" /></div>
+    <div class="snowflake"><img src="/df.png" style="width:20px;" /></div>
+    <div class="snowflake"><img src="/df.png" style="width:20px;" /></div>
+    <div class="snowflake"><img src="/df.png" style="width:20px;" /></div>
+    <div class="snowflake"><img src="/df.png" style="width:20px;" /></div>
+  
 
+</div>
+</div>
+  
   <body>
     <div
       title="DF Logo"
